--- a/BuilderForm.Web/Views/Shared/_Layout.cshtml
+++ b/BuilderForm.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
 	<link type="text/css" rel="stylesheet" href="~/dist/angular-form-builder.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
 	<script type="text/javascript" src="~/dist/angular-form-builder.js"></script>
 	<script type="text/javascript" src="~/dist/angular-form-builder-components.js"></script>
 	<script type="text/javascript" src="https://kelp404.github.io/angular-validator/dist/angular-validator.min.js"></script>
