Applied Migrations to Db Configured Route and MVC

--- a/BuilderForm.Web/Views/Forms/Create.cshtml
+++ b/BuilderForm.Web/Views/Forms/Create.cshtml
@@ -24,19 +24,19 @@
 						</button>
 						<ul class="dropdown-menu">
 							<li>
-								<a ng-click="addComponent('input')" href="#">Text Input</a>
+								<a ng-click="addComponent('input')">Text Input</a>
 							</li>
 							<li>
-								<a ng-click="addComponent('textarea')" href="#">Text Area</a>
+								<a ng-click="addComponent('textarea')">Text Area</a>
 							</li>
 							<li>
-								<a ng-click="addComponent('checkbox')" href="#">Checkbox</a>
+								<a ng-click="addComponent('checkbox')">Checkbox</a>
 							</li>
 							<li>
-								<a ng-click="addComponent('radio')" href="#">Radio</a>
+								<a ng-click="addComponent('radio')">Radio</a>
 							</li>
 							<li>
-								<a ng-click="addComponent('select')" href="#">Select</a>
+								<a ng-click="addComponent('select')">Select</a>
 							</li>
 						</ul>
 					</div>
